manifests/infrastructure/manifests/traefik/middlewares.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: forward-auth
  namespace: traefik
spec:
  forwardAuth:
    address: http://traefik-forward-auth.traefik.svc
    authResponseHeaders:
      - X-Forwarded-User
